# flag-catcher

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: ctf.cpp  ctf.hpp  db.cpp  db.hpp  main.cpp  team.cpp  team.hpp
